--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@
 .btn:hover{
     border-radius: 10px;
 }
+.up {
+    transition: transform 0.3s ease;
+}
+
+.up:hover {
+    transform: translateY(-5px);
+}
